fixing hat alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
       transform: rotate(45deg);
       border-radius: 100%;
       z-index: 100;
-      left: 20px;
+      left: 22px;
       top: 24px; }
     .witch .body .hat-container .hat-front {
       position: relative;
@@ -41,9 +41,9 @@
       position: relative;
       width: 0px;
       height: 0px;
-      border-top: 60px solid transparent;
-      border-bottom: 80px solid #645A4C;
-      border-left: 100px solid #645A4C; }
+      border-top: 150px solid transparent;
+      border-bottom: 90px solid #645A4C;
+      border-left: 120px solid #645A4C; }
   .witch .body .head {
     position: absolute;
     z-index: 8; }
