--- a/assets/sass/components/_witch.scss
+++ b/assets/sass/components/_witch.scss
@@ -18,7 +18,7 @@
         transform: rotate(45deg);
         border-radius: 100%;
         z-index: 100;
-        left: 20px;
+        left: 22px;
         top: 24px;
       }
 
@@ -54,9 +54,9 @@
         position: relative;
         width: 0px;
         height: 0px;
-        border-top: 60px solid transparent;
-        border-bottom: 80px solid $brown;
-        border-left: 100px solid $brown;
+        border-top: 150px solid transparent;
+        border-bottom: 90px solid $brown;
+        border-left: 120px solid $brown;
       }
     } // end hair
 
